test/cpls/errors/println.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "println",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": [
    {
      "type": "VALUE",
      "value": "\"hello world\"",
      "offset": 8,
      "line": 1,
      "column": 9
    }
  ]
}